Your commit message here

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="profile-header">
           <img src="pf.jpeg" alt="Profile Picture" class="profile-img" />
           <h2>Roth Visal</h2>
-          <p>Minecraft  | cpvp</p>
+          <p>Minecraft|cpvp</p>
         </div>
 
         <div class="profile-body p-4 text-center">
@@ -95,11 +95,18 @@
 
             <!-- TikTok Link -->
             <a
-              href="tiktok.com/@ov_hg_gg"
+              href="https://www.tiktok.com/@ov_hg_gg?_t=ZS-8zMSWHLA8bB&_r=1"
               class="btn btn-tiktok"
               target="_blank"
             >
               <i class="fab fa-tiktok me-2"></i> TikTok
+            </a>
+            <a
+              href="https://t.me/@Roth_visal_1"
+              class="btn btn-telegram"
+              target="_blank"
+            >
+              <i class="fab fa-telegram me-2"></i> Telegram
             </a>
           </div>
 
